mobile unnecessary horizontal scroll fixed

--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,11 @@ a:hover {
 }
 
 
+.u-detail-address {
+  width: 80%;
+}
+
+
 /* Education */
 .u-institute-logo {
   width: 70px;
